[tool.poetry]
name = "akagi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
youtube-dl = "^2021.2.4"
PyNaCl = "^1.4.0"
"discord.py" = "^1.6.0"
wavelink = "^0.9.6"
praw = "^7.1.4"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
